Documentation Update   - update to current cs format   -

--- a/doc-src/admin.html
+++ b/doc-src/admin.html
@@ -3,16 +3,15 @@
 <h2>Contact</h2>
 
 <p> Please send any comments, suggestions and bug reports to
-	<!--(raw)-->
-	<a href="mailto:aldo@nullcube.com">aldo@nullcube.com</a>.
-	<!--(end)-->
+	<a href="mailto:dev@nullcube.com">dev@nullcube.com</a>.
 </p>
+
 
 <h2>License</h2>
 
-<p>PyOpenBSD is licensed under the BSD license. The full text is included
+<p>PacketPy is licensed under the BSD license. The full text is included
 below, but the essential gist of it is that you can do whatever you like with
-PyOpenBSD, as long as the copyright stays intact.</p>
+PacketPy, as long as the copyright stays intact.</p>
 
 <hr>
 
